# pdf-to-markdown

./: README.md  pyproject.toml
src/pdf_to_markdown/: __init__.py  converter.py  converter_cli.py  slicer.py  slicer_cli.py
